name:                sal-lang
version:             0.1.0.0
synopsis:            Haskell to SAL Translator
description:         Haskell data types representing the SAL language
                     (http://sal.csl.sri.com) and a pretty printer for
                     generating SAL specifications.
license:             BSD3
license-file:        LICENSE
author:              Benjamin Jones
maintainer:          bjones@galois.com
copyright:           All Rights Reserved, Galois Inc. 2015
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Language.SAL,
                     Language.SAL.Syntax

  build-depends:     base >= 4.7 && < 4.8,
                     semigroups >= 0.16 && < 1.0
  hs-source-dirs:    src
  default-language:  Haskell2010
